# pz-panel

./: .editorconfig  .env.example  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  wsgi.py
panel/: __init__.py
panel/routes/: auth.py  main.py  server.py
panel/services/: power_actions_service.py  server_options_service.py  server_status_service.py
panel/static/javascript/: add-items-modal.js  list-items.js  mixins.js  power-action-button.js  resources-usage.js  search-field.js  server-log-modal.js  server-status.js
panel/static/styles/: main.css
panel/templates/: layout.html
panel/templates/auth/: login.html
panel/templates/main/: _mods_and_workshop.html  _server_status.html  index.html
panel/templates/partials/: _footer.html  _header.html
panel/utils/: __init__.py  assets.py  power_actions.py  rcon.py  resources_functions.py
